--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.immregistries</groupId>
-  <artifactId>dqa-nist-validator-connector</artifactId>
+  <artifactId>nist-validator-connector</artifactId>
   <version>0.1</version>
   <packaging>jar</packaging>
 
-  <name>DQA NIST Validator Connector</name>
+  <name>NIST Validator Connector</name>
   <url>http://immregistries.org</url>
 
   <licenses>
@@ -22,6 +22,7 @@
     <slf4j.version>1.6.2</slf4j.version>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <mqe.version>2018.6-BETA</mqe.version>
   </properties>
 
   <dependencies>
@@ -32,11 +33,10 @@
 			<scope>test</scope>
 		</dependency>
 
-
     <dependency>
       <groupId>org.immregistries</groupId>
-      <artifactId>dqa-hl7-utility</artifactId>
-      <version>2.0.2-DEVELOPMENT</version>
+      <artifactId>mqe-hl7-utility</artifactId>
+      <version>${mqe.version}</version>
     </dependency>
 
 	<dependency>
