--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.immregistries</groupId>
   <artifactId>nist-validator-connector</artifactId>
-  <version>0.1</version>
+  <version>2020.02-BETA</version>
   <packaging>jar</packaging>
 
   <name>NIST Validator Connector</name>
@@ -22,7 +22,7 @@
     <slf4j.version>1.6.2</slf4j.version>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-    <mqe.version>2018.12-BETA</mqe.version>
+    <mqe.version>2020.02-BETA</mqe.version>
   </properties>
 
   <dependencies>
